VFS-5219 fixed collapse animation

--- a/src/app/styles/application-layout.scss
+++ b/src/app/styles/application-layout.scss
@@ -1,6 +1,5 @@
 html, body, body > .ember-view {
   height: 100%;
-  overflow: hidden;
 }
 
 .application-container {
@@ -8,6 +7,7 @@ html, body, body > .ember-view {
   flex-direction: column;
   padding: $padding-base-vertical;
   height: 100%;
+  max-height: 100%;
   overflow: auto;
 
   & > .content {
